The react agent is calling tools

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ dependencies = [
     "ipython>=9.4.0",
     "langchain>=0.3.27",
     "langchain-community>=0.3.27",
+    "langchain-openai>=0.3.33",
+    "langgraph>=0.6.7",
     "matplotlib>=3.10.5",
     "numpy>=2.3.2",
     "openai>=1.101.0",
