--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,9 +9,13 @@ dependencies = [
     "ipython>=9.4.0",
     "langchain>=0.3.27",
     "langchain-community>=0.3.27",
+    "langchain-mcp-adapters>=0.1.9",
     "langchain-openai>=0.3.33",
+    "langchain-tavily>=0.2.11",
     "langgraph>=0.6.7",
+    "langgraph-cli[inmem]>=0.4.2",
     "matplotlib>=3.10.5",
+    "mcp[cli]>=1.14.0",
     "numpy>=2.3.2",
     "openai>=1.101.0",
     "pandas>=2.3.2",
